# pgmount

./: .dockerignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  agent.md  docker-compose.yml
.github/scripts/: smoke_openshell.sh
.github/workflows/: build-cluster.yml  build-sandbox.yml  ci.yml  (+1 more)
crates/openeral/: Cargo.toml
crates/openeral/src/: main.rs
crates/pgmount/: Cargo.toml
crates/pgmount-core/: Cargo.toml
crates/pgmount-core/migrations/: V1__create_pgmount_schema.sql  V2__create_mount_log.sql  V3__create_cache_hints.sql  V4__create_workspace_tables.sql
crates/pgmount-core/src/: error.rs
crates/pgmount-core/src/cli/: list.rs  mod.rs  mount.rs  unmount.rs  version.rs  workspace.rs
crates/pgmount-core/src/config/: connection.rs  types.rs
crates/pgmount-core/src/db/: migrate.rs  mod.rs  pool.rs  types.rs
crates/pgmount-core/src/db/queries/: indexes.rs  introspection.rs  mod.rs  rows.rs  stats.rs  workspace.rs
crates/pgmount-core/src/format/: json.rs  mod.rs  yaml.rs
crates/pgmount-core/src/fs/: attr.rs  cache.rs  inode.rs  mod.rs  workspace.rs  workspace_inode.rs
crates/pgmount-core/src/fs/nodes/: column.rs  mod.rs  row.rs  row_file.rs  table.rs
crates/pgmount-core/src/mount/: registry.rs
crates/pgmount-core/tests/: integration.rs  workspace_integration.rs
crates/pgmount/src/: main.rs
openeral-js/: lint.mjs  package.json  pnpm-lock.yaml  test-e2e-claude.mjs  test-integration.mjs  test-memory-refresh.mjs  tsconfig.json
openeral-shell/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  openeral-shell-start.sh  policy.yaml
tests/: test_claude_e2e.sh  test_fuse_mount.sh  test_live_secret_injection.sh  test_sandbox_e2e.sh  test_setup_e2e.sh
(+96 files in other folders)
