[package]
name = "openeral"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "openeral"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
openeral-core = { path = "../openeral-core" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
