[package]
name = "pgmount-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "pgmount_core"
path = "src/lib.rs"

[dependencies]
fuser = "0.17"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-chrono-0_4"] }
deadpool-postgres = "0.14"
postgres-types = { version = "0.2", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
serde_yml = "0.0.12"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
dashmap = "6"
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2"
percent-encoding = "2"

[lints]
workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
serde_json = "1"
