[package]
name = "pgmount"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pgmount"
path = "src/main.rs"

[dependencies]
pgmount-core = { path = "../pgmount-core" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
